[package]
name = "server"
version = "0.1.0"
authors = ["Parth Desai <desaiparth08@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
futures = "0.3.8"
http = "0.2.1"
log = "0.4.11"
num-bigint = "0.3.1"
num-traits = "0.2.14"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
tokio = { version = "0.2.23", features = ["macros", "sync"] }
uuid = { version = "0.8.1", features = ["v4"] }
warp = "0.2.5"
shared = {path = "../shared", default-features = true}
