[package]
name = "shared"
version = "0.1.0"
authors = ["Parth Desai <desaiparth08@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = {version = "1.0.34", default-features = false} # better to use `thiserror` in this shared crate
serde = {version = "1.0.117", default-features = false}
serde_derive = {version = "1.0.117", default-features = false}
rmp-serde = {version = "0.14.4", default-features = false}
num-bigint = {version = "0.3", default-features = false}
byteorder = {version = "1.3.4", default-features = false}

rand = {version = "0.7.3", optional = true}
glass_pumpkin = {version = "0.4.0", optional = true}
sha2 = {version = "0.9.2", optional = true}

[features]
default = ["std"]
std = ["glass_pumpkin", "rand", "sha2"]